; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/allwinner/extr_a10_codec.c_a10codec_chan_getcaps.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/allwinner/extr_a10_codec.c_a10codec_chan_getcaps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcmchan_caps = type { i32 }
%struct.a10codec_chinfo = type { i64 }

@PCMDIR_PLAY = common dso_local global i64 0, align 8
@a10codec_pcaps = common dso_local global %struct.pcmchan_caps zeroinitializer, align 4
@a10codec_rcaps = common dso_local global %struct.pcmchan_caps zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.pcmchan_caps* (i32, i8*)* @a10codec_chan_getcaps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.pcmchan_caps* @a10codec_chan_getcaps(i32 %0, i8* %1) #0 {
  %3 = alloca %struct.pcmchan_caps*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.a10codec_chinfo*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = bitcast i8* %7 to %struct.a10codec_chinfo*
  store %struct.a10codec_chinfo* %8, %struct.a10codec_chinfo** %6, align 8
  %9 = load %struct.a10codec_chinfo*, %struct.a10codec_chinfo** %6, align 8
  %10 = getelementptr inbounds %struct.a10codec_chinfo, %struct.a10codec_chinfo* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @PCMDIR_PLAY, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store %struct.pcmchan_caps* @a10codec_pcaps, %struct.pcmchan_caps** %3, align 8
  br label %16

15:                                               ; preds = %2
  store %struct.pcmchan_caps* @a10codec_rcaps, %struct.pcmchan_caps** %3, align 8
  br label %16

16:                                               ; preds = %15, %14
  %17 = load %struct.pcmchan_caps*, %struct.pcmchan_caps** %3, align 8
  ret %struct.pcmchan_caps* %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
